# BarcodeReader-Backend

./: db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializer.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
barcode_reader/: asgi.py  settings.py  urls.py  wsgi.py
cosmetics/: admin.py  models.py  serializer.py  urls.py  views.py
cosmetics/migrations/: 0001_initial.py
