[tool.poetry]
name = "barcodereaderbackend"
version = "0.1.0"
description = ""
authors = ["Mohammad Abdul Ghafour <mohammad1478971539@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
